tests/health/gold/sdk/examples__http__http.toit.gold
<pkg:pkg-http>/connection.toit:176:7: error: Missing implementations for interface methods
class DetachedSocket_ implements tcp.Socket:
      ^~~~~~~~~~~~~~~
<sdk>/net/tcp.toit:22:3: note: Missing implementation for 'no_delay'
  no_delay -> bool
  ^~~~~~~~
<sdk>/net/tcp.toit:25:3: note: Missing implementation for 'no_delay'
  no_delay= value/bool
  ^~~~~~~~~
